<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="filiaalmodel"
            type="com.apps.m.tielbeke4.viewmodel.FiliaalViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="659dp"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/add_mededeling_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="@{()->filiaalmodel.addMededeling()}"
            android:text="@string/add_mededeling_text"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_gegevens"
            app:layout_constraintVertical_bias="0.882" />

        <EditText

            android:id="@+id/filiaal_num"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/Invoer_FiliaalNummer"
            android:inputType="number"
            android:text="@={filiaalmodel.filiaalNummer}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout

            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="48dp"

            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filiaal_num">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/zoek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:onClick="@{()->filiaalmodel.zoek()}"
                android:text="@string/zoek_button_text"
                android:textAlignment="center"
                android:textSize="12sp"
                app:icon="@drawable/ic_search_black_24dp"
                app:iconTint="@color/colorPrimary"
                app:rippleColor="@color/colorPrimary" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/phone_button_id"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/blue"
                android:contentDescription="@string/telefoneren"
                android:onClick="@{()->filiaalmodel.tel()}"
                app:cornerRadius="3dp"
                app:icon="@drawable/ic_call_black_24dp"
                app:iconTint="@color/colorPrimary"
                app:rippleColor="@color/colorPrimary"

                />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/kaart_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:onClick="@{()->filiaalmodel.kaart()}"
                android:text="@string/kaart_button_text"
                android:textSize="12sp"
                app:icon="@drawable/ic_map_black_24dp"
                app:iconTint="@color/colorPrimary"
                app:rippleColor="@color/colorPrimary" />


        </LinearLayout>

        <TextView
            android:id="@+id/text_gegevens"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginBottom="8dp"
            android:isScrollContainer="true"
            android:text="@{filiaalmodel.filiaalTitle}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.154" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

